activity and sync feed added

--- a/namespace.html
+++ b/namespace.html
@@ -19,9 +19,21 @@
             </p>
 <p>
             Properties:
-            </p>
+            <a href="#id2540957">activity feed</a>, <a href="#id2541785">sync feed</a></p>
 </div>
 <a name="class-detail"></a><h2 class="title">Classes</h2>
 <a name="class-detail"></a><h2 class="title">Properties</h2>
+<div class="detail-box">
+<h3>
+<a name="id2540957"></a>activity feed</h3>
+<code>http://purl.org/net/dssn/activityFeed</code><p><span class="bold">Subproperty Of: </span><a href="http://rdfs.org/sioc/ns#feed">http://rdfs.org/sioc/ns#feed</a><br><span class="bold">Domain: </span><a href="http://xmlns.com/foaf/0.1/Agent">http://xmlns.com/foaf/0.1/Agent</a><br><span class="bold">Is defined by: </span><a href="http://purl.org/net/dssn/">http://purl.org/net/dssn/</a><br></p>
+<p></p>
+</div>
+<div class="detail-box">
+<h3>
+<a name="id2541785"></a>sync feed</h3>
+<code>http://purl.org/net/dssn/syncFeed</code><p><span class="bold">Subproperty Of: </span><a href="http://rdfs.org/sioc/ns#feed">http://rdfs.org/sioc/ns#feed</a><br><span class="bold">Is defined by: </span><a href="http://purl.org/net/dssn/">http://purl.org/net/dssn/</a><br></p>
+<p></p>
+</div>
 </body>
 </html>
